# Cmake-tutorial-demo

./: README.md
demo1/: tutorial.cxx
demo2/: CMakeLists.txt  build.sh  tutorial.cxx
demo3/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
demo3/MathFunctions/: MathFunctions.h  mysqrt.cxx
demo4/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
demo5/: CMakeLists.txt  build.sh
demo6/MathFunctions/: CMakeLists.txt
demo7/: CMakeLists.txt  build.sh
demo7/MathFunctions/: CMakeLists.txt  MakeTable.cxx
demo7/install/include/: TutorialConfig.h
